<resources>
    <string name="app_name">Episodie</string>
    <string name="folder_assets_images">Images</string>

    <string name="menu_action_most_popular_title">Most popular</string>
    <string name="menu_action_top_list_title">TOP 100</string>
    <string name="menu_action_premieres">Premieres</string>

    <string name="animation_loading">logo_loading_anim.json</string>
    <string name="animation_episodie_text">episodie_anim.json</string>

    <string name="item_error_message">Ops, something went wrong</string>
    <string name="item_error_content_description">Error icon</string>
    <string name="item_error_retry">Retry</string>

    <string name="item_loading_message">Loading…</string>

    <string name="drawer_feed">Feed</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_watched">Your Library</string>
    <string name="drawer_time_calculator">Time calculator</string>
    <string name="drawer_season_tracker">Season tracker</string>
    <string name="drawer_logo_description">Logo of the application</string>
    <string name="drawer_menu_item_icon_description">Icon of menu item</string>
    <string name="drawer_ic_watching_time">Icon of watching time</string>
    <string name="watching_time_0d_0h_0m">Watching time: 0d : 0h : 0m</string>
    <string name="watching_time_format">Watching time: %1$s</string>

    <string name="top_list_app_bar_title">Top 100</string>

    <string name="lorem_ipsum">Last Week Tonight with John Oliver, John Oliver presents a satirical look at the week in news, politics and current events</string>
    <string name="lorem_ipsum2"><p>Based on the bestselling book series <i>A Song of Ice and Fire</i> by George R.R. Martin, this sprawling new HBO drama is set in a world where summers span decades and winters can last a lifetime. From the scheming south and the savage eastern lands, to the frozen north and ancient Wall that protects the realm from the mysterious darkness beyond, the powerful families of the Seven Kingdoms are locked in a battle for the Iron Throne. This is a story of duplicity and treachery, nobility and honor, conquest and triumph. In the <b>Game of Thrones</b>, you either win or you die.</p></string>

    <string name="tv_show_info_imdb_description">IMDb: Movies and TV</string>
    <string name="tv_show_summary_official_website_description">Official website</string>
    <string name="tv_show_summary_tv_maze_description">TvMaze: TV series database</string>
    <string name="tv_show_summary_learn_more_header">Learn more</string>
    <string name="tv_show_summary_ic_official_website_description">Icon of official website</string>
    <string name="tv_show_summary_logo_tv_maze_description">Logo of tv maze</string>
    <string name="tv_show_summary_logo_imdb_description">Logo of imdb</string>
    <string name="tv_show_summary_ic_network_description">Icon of network</string>
    <string name="tv_show_summary_header">Summary</string>

    <string name="all_ic_share_description">Icon of share</string>
    <string name="tv_show_details_ic_arrow_back_description">Back button</string>
    <string name="tv_show_details_cover_description">Cover of tv show</string>
    <string name="tv_show_details_status">Status: %1$s</string>
    <string name="item_all_format_premiered">Premiered: %1$s</string>
    <string name="item_all_format_premiere">Premiere: %1$s</string>
    <string name="tv_show_details_backdrop_description">Background</string>

    <string name="item_season_s_prefix_format">S%1$s</string>
    <string name="item_season_order_format">Episodes: %1$s</string>
    <string name="item_season_season_cover_description">Cover of season</string>

    <string name="item_episode_hashtag_prefix_format">#%1$s</string>
    <string name="item_episode_screen_description">Screen of the episode</string>
    <string name="item_episode_summary_header">Summary</string>

    <string name="item_all_ic_diamond_description">Image button add to watched</string>
    <string name="item_all_cover_description">Tv show\'s cover</string>
    <string name="item_all_ic_runtime_description">Icon of runtime</string>

    <string name="fragment_seasons_empty_episodes_message">Episodes have not been added yet</string>

    <string name="time_calculator_search_result_not_found">Nothing found</string>
    <string name="time_calculator_toolbar_title">Time calculator</string>
    <string name="time_calculator_header_info">Calculate your total time spent watching TV shows</string>
    <string name="time_calculator_background_description">Background</string>
    <string name="time_calculator_increment_selected">+1 selected</string>
    <string name="time_calculator_episode_order_icon_description">Icon of episode order</string>
    <string name="time_calculator_incerement_selected">+ 1 selected</string>
    <string name="time_calculator_decrement_selected">- 1 selected</string>
    <string name="time_calculator_addition_episodes">+ %1$s episodes</string>
    <string name="time_calculator_subtraction_episodes">- %1$s episodes</string>
    <string name="time_calculator_tv_show_present">TV Show already added.</string>

    <string name="season_tracker_cover_description">Cover of the episode</string>

    <string name="all_font_path">fonts/coolvetica.ttf</string>
    <string name="cover_transition">transition_cover</string>
    <string name="title_transition">transition_title</string>
    <string name="zero_prefix_format">0%1$s</string>
    <string name="divider_format">%1$s / %2$s</string>
    <string name="season_number_format">Season #%1$s</string>

    <string name="all_toast_error_message">Something went wrong</string>
    <string name="fragment_top_list_backdrop_description">Background of app bar</string>
    <string name="view_runtime_alerter_description">Icon of runtime alert</string>
    <string name="view_time_calculator_counter_icon__description">Icon of runtime alert</string>
    <string name="all_suggestion_dialog_title">Select one</string>
    <string name="all_search_view_hint">Type a tv show</string>
    <string name="all_backdrop_hint">Search for a tv show</string>

    <string name="dialog_select_season_header">Select season</string>
    <string name="item_episode_premiere_eta">Premiere: ETA</string>
    <string name="snackbar_button_disable">Disable</string>
    <string name="snackbar_message_about_notifications">You will receive a notifications about new episodes</string>
    <string name="fab_button_notifications_on">Enable notifications</string>
    <string name="fab_button_notifications_off">Disable notifications</string>

    <string name="dialog_on_season_completed_message">Congratulations!\n\nYou have watched %1$s season %2$s\nTime spent watching: %3$s\nEpisode watched: %4$s</string>
    <string name="dialog_season_tracker_start_new">Start new tracking</string>
    <string name="notification_new_episode_title">New episode!</string>
    <string name="notification_premiere_scheduled">You will be receive notification about TV show premiere.</string>
    <string name="item_premiere_genre">Genre: %1$s</string>
    <string name="fragment_premieres_title_app_bar">Premiere dates</string>
    <string name="format_date_us">yyyy-MM-dd</string>
    <string name="format_new_premiere">New premiere: %1$s</string>
    <string name="menu_title_search">Search</string>
    <string name="toolbar_title_search">Search</string>
    <string name="your_library_title">Your library</string>
    <string name="layout_empty_message">Your library is empty.\nThere are simply ways to add tv shows</string>
    <string name="layout_icon_empty_message_description">Header icon</string>
    <string name="image_view_your_library_background_description">Image as background</string>
    <string name="toast_premiere_reminder_dismiss">Premiere reminder dismiss</string>
    <string name="toast_premiere_reminder_scheduled">Premiere reminder scheduled!</string>
    <string name="alert_dialog_tip_title">Tip</string>
    <string name="alert_dialog_your_library_tip_message">Tip: You can swipe a cover down or up to delete the TV show from your library.</string>
    <string name="alert_dialog_button_text">OK</string>
    <string name="alert_dialog_season_tracker_tip_message">Tip: You can swipe down or up to delete a TV show.</string>
    <string name="fab_button_action_reset">Reset</string>
</resources>
